# ygo_meta_dashboard

./: .gitignore  README.md  hello.py  justfile  pyproject.toml  requirements.txt
dashboard/: app.py
dashboard/pages/: 1_Decklisten.py  2_Aggregierte_Decks.py  3_Deckgruppen_Details.py  4_Non_Engine.py  5_Langzeitdaten.py  6_Deckbuilder.py
src/ygo_crawler/: __init__.py  card_metadata.py  cli.py  client.py  config.py  crawler.py  dashboard_cache.py  dashboard_filters.py  dashboard_queries.py  exporter.py  filters.py  models.py  non_engine_roles.py  storage.py
src/ygo_crawler/parsers/: __init__.py  category.py  common.py  deck.py  tournament.py
